keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak

spec:
  replicas: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak

          image: quay.io/keycloak/keycloak:26.7.1

          args:
            - start

          ports:
            - name: http
              containerPort: 8080

            - name: management
              containerPort: 9000

          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"

            limits:
              memory: "2Gi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak

spec:
  selector:
    app: keycloak

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
